# realsense_demo_extraction

./: .gitignore  README.MD  README.md  historyOpenCVInstall  read_bag_example.py  test.py  test2.py  test_save.py  tracker  tracker_python.py
Tracker/: CMakeLists.txt  makefile  tracker.cpp  tracker_test.cpp
Tracker/tracking/: CMakeLists.txt  tracker_test.cpp
Tracker/tracking/samples/: tracker.py
align/: align_test.py
mix/: READEME.md  discretisation.py  error_onMemory.txt  fig_test  multi_tracker_align_traj.py  multi_tracker_align_traj_v2.py  multi_tracker_align_traj_v3.py  test_save.py  tracker_align_traj.py
mix/pickle/: demo_1.pkl
multi_tracker/: CMakeLists.txt  tracking_multi.cpp
